--- a/src/skydrop/view/ProductPageView.form
+++ b/src/skydrop/view/ProductPageView.form
@@ -311,7 +311,7 @@
                 </Component>
                 <Component class="javax.swing.JLabel" name="name1">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="name"/>
+                    <Property name="text" type="java.lang.String" value="men"/>
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
